--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "uglify-js": "2.8.29",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
     "@types/three": "^0.84.27",
