--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
+    "@types/gsap": "^1.19.1",
     "@types/three": "^0.84.27",
-    "gsap": "^1.20.2",
+    "gsap": "^1.20.3",
     "three": "^0.87.1",
     "three-orbit-controls": "^82.1.0",
     "webvr-polyfill": "^0.9.38"
