--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
     "script-loader": "^0.7.0",
     "uglify-js": "2.8.29",
     "uglifyjs-webpack-plugin": "^0.4.6",
